infrastructure/database/redis/redis-commander/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-commander
  namespace: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-commander
  template:
    metadata:
      labels:
        app: redis-commander
    spec:
      containers:
        - name: redis-commander
          image: rediscommander/redis-commander:latest@sha256:19cd0c49f418779fa2822a0496c5e6516d0c792effc39ed20089e6268477e40a
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8081
