infrastructure/database/redis/redis-commander/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-commander
  namespace: redis
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8081
      targetPort: http
  selector:
    app: redis-commander
